changed some photos and banner size on course landing page and fixed broken CSS

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -64,6 +64,7 @@
   align-items: center;
   justify-content: center;
   background-position: center;
+  background-repeat: no-repeat;
   h3 {
   font-size: 40px;
   font-weight: bold;
